--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,9 @@
     "outDir": "./dist",
     "baseUrl": "./src"
   },
-  "include": ["src"]
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    "src/types/**/*.d.ts" // Explicitly include your declaration files
+  ]
 }
