--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "commonjs",
-    "typeRoots": ["./node_modules/@types", "./src/types"],
+    "typeRoots": ["src/types", "node_modules/@types"],
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "strict": true,
