--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/ariuka-zuzaan/cs489-project#readme",
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "class-validator": "^0.14.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.14.1",
